# ontofishing

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt
.agy/: README.md
.codex/: AGENTS.md  tasks.md
.gemini/: README.md
.github/workflows/: deploy-huggingface.yml
.grok/: README.md
data/: concepts.example.csv  ontology_edges.example.csv  opportunities_raw.example.csv  schema.concept.json  schema.ontology_edge.json  schema.opportunity.json  sources.yaml
docs/: google_adk_decision.md  grok_worker_integration.md  huggingface_deploy.md  notion_cockpit_design.md  notion_sync.md  ontofishing_update.md  semantic_driver_operator.md
prompts/: agy_domain_driver.md  chatgpt_audit.md  gemini_domain_driver.md  grok_heavy_discovery.md  grok_worker_discovery.md
scripts/: __init__.py  agy_domain_driver.sh  build_ontology_map.py  gemini_domain_driver.sh  grok_discovery.sh  grok_import_candidates.py  import_semantic_annotations.py  notion_sync.py
src/bounty_wizard/: __init__.py  cli.py  cockpit.py  models.py  notion_sync.py  ontology.py  scoring.py
tests/: test_cockpit.py  test_grok_import.py  test_notion_sync.py  test_ontology.py  test_scoring.py  test_semantic_import.py
